<resources>
    <string name="app_name">3dTable</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_products">Ürünler</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="btn_delete">Sil</string>
    <string name="btn_add_to_basket">Sepete Ekle</string>
    <string name="fragment_product_detail">Ürün Detayı</string>
    <string name="fragment_basket">Sepetim</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_sign_up">"Kayıt Ol"</string>

    <string name="Login">Giriş</string>

    <string name="name">İsim</string>
    <string name="sur_name">Soy İsim</string>
    <string name="mail">E-Posta</string>
    <string name="passwd">Şifre</string>
    <string name="passwd_again">Şifre (tekrar)</string>
    <string name="city">Şehir</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="address">Adres</string>
    <string name="paswwd_not_same">Girilen şifreler aynı değil !</string>
    <string name="add_to_basket_msg">Ürününüz Sepete Eklendi</string>
    <string name="btn_complate_shopping">Alışverişi Tamamla</string>
    <string name="btn_continue">Devam Et</string>

    <string name="order_success">Siparişiniz başarıyla alındı</string>

    <string-array name="cities">

        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Aksaray</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Ardahan</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bartın</item>
        <item>Batman</item>
        <item>Bayburt</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Düzce</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkâri</item>
        <item>Hatay</item>
        <item>Iğdır</item>
        <item>Isparta</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kahramanmaraş</item>
        <item>Karabük</item>
        <item>Karaman</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kilis</item>
        <item>Kırıkkale</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Mardin</item>
        <item>Mersin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Osmaniye</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Şanlıurfa</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Şırnak</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yalova</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
