<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_products">

    <fragment
        android:id="@+id/nav_products"
        android:name="com.codexe.a3dtable.ui.products.ProductFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_nav_products_to_nav_productDetail"
            app:destination="@+id/nav_productDetail"
            app:popUpTo="@+id/nav_products" />
    </fragment>


    <fragment
        android:id="@+id/nav_productDetail"
        android:name="com.codexe.a3dtable.ui.productDetail.ProductDetailFragment"
        android:label="@string/fragment_product_detail"
        tools:layout="@layout/fragment_product_detail"

        >
        <action
            android:id="@+id/action_nav_productDetail_to_basketFragment"
            app:destination="@id/nav_basketFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.codexe.a3dtable.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.codexe.a3dtable.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_basketFragment"
        android:name="com.codexe.a3dtable.ui.basket.BasketFragment"
        android:label="@string/fragment_basket"
        tools:layout="@layout/fragment_basket">
        <action
            android:id="@+id/action_nav_basketFragment_to_nav_productDetail"
            app:destination="@id/nav_productDetail" />
    </fragment>
</navigation>