<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <GridLayout
        android:id="@+id/fr_register_grd_pnl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/fr_register_edt_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/sur_name" />


        <EditText
            android:id="@+id/fr_register_edt_surname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/mail" />

        <EditText
            android:id="@+id/fr_register_edt_mail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/passwd" />

        <EditText
            android:id="@+id/fr_register_edt_passwd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/passwd_again" />

        <EditText
            android:id="@+id/fr_register_edt_passwd_again"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/phone_number"
            android:layout_marginRight="20dp" />

        <EditText
            android:id="@+id/fr_register_edt_phone_number"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/city" />

        <Spinner
            android:id="@+id/fr_register_spn_city"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:fontFamily="@font/roboto_thin"
            android:textFontWeight="800"
            android:textSize="18sp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/fr_register_edt_address"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:inputType="textMultiLine" />


        <Button
            android:id="@+id/fr_register_btnRegister"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:text="@string/login_sign_up"
            android:enabled="false" />

    </GridLayout>

</RelativeLayout>