<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnOrderPreserved="false">


        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/mail" />


        <EditText
            android:id="@+id/ac_login_mail"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:width="200dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/passwd" />


        <EditText
            android:id="@+id/ac_login_password"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:width="200dp"
            android:inputType="textPassword" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_row="2"
            android:layout_column="1">

            <Button
                android:id="@+id/ac_btn_login"
                android:layout_width="106dp"
                android:layout_height="wrap_content"

                android:layout_columnSpan="3"
                android:text="@string/Login" />

            <TextView
                android:id="@+id/fr_login_txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:text="@string/login_sign_up"
                android:textColor="#000080"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/ac_login_progressbar"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />
    </GridLayout>


</RelativeLayout>
